fix username box styling
Fixed the username box styling so that it is in the middle of the nav bar, and also fixed the "username too long" alert to fit nicely underneath.

--- a/Video Syncer/wwwroot/css/navbar/navbar-plain.css
+++ b/Video Syncer/wwwroot/css/navbar/navbar-plain.css
@@ -72,9 +72,8 @@
 /* The red warning that appears when the username is too long */
 #alert-username-too-long {
     margin-bottom: 1px;
-    height: 14px;
+    height: 16px;
     line-height: 12px;
-    padding: 0px 15px;
     font-size: 12px;
     position: absolute;
 }
@@ -87,8 +86,8 @@
 
 /* Styling of the box where you enter your username. this applies generally in day and night mode*/
 #username-box {
-    border: none;
-    margin-bottom: -5px;
-    height: 30%;
-    width: 210px;
+    border: #f5f5f5;
+    margin-top: 15px;
+    height: 40%;
+    width: 250px;
 }
